--- a/src/components/researchCard/ResearchCard.scss
+++ b/src/components/researchCard/ResearchCard.scss
@@ -80,6 +80,10 @@
   margin-top: 0.5rem;
 }
 
+.publication-link {
+  color: #a9a7f9;
+}
+
 /* Media Query */
 
 @media (max-width: 1380px) {
